--- a/run-example-builddeploy/cloudbuild.yaml
+++ b/run-example-builddeploy/cloudbuild.yaml
@@ -17,6 +17,7 @@ steps:
 # Build the container image
 - name: 'gcr.io/cloud-builders/docker'
   args: ['build', '-t', 'gcr.io/$PROJECT_ID/myimage', '.']
+  dir: 'run-example-builddeploy'
 # Push the container image to Container Registry
 - name: 'gcr.io/cloud-builders/docker'
   args: ['push', 'gcr.io/$PROJECT_ID/myimage']
